<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_margin"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/et_username"
            android:maxLength="10"
            android:hint="@string/hint_input_name"
            style="@style/inputTextStyle"/>
        <EditText
            android:id="@+id/et_phone"
            android:maxLength="11"
            android:inputType="phone"
            android:hint="@string/hint_input_phone"
            style="@style/inputTextStyle"/>
        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_input_email"
            style="@style/inputTextStyle"/>
        <EditText
            android:maxLength="15"
            android:id="@+id/et_pwd"
            android:inputType="textPassword"
            android:hint="@string/hint_input_pwd"
            style="@style/inputTextStyle"/>
        <EditText
            android:maxLength="15"
            android:id="@+id/et_alignPwd"
            android:inputType="textPassword"
            android:hint="@string/hint_input_align_pwd"
            style="@style/inputTextStyle"/>

        <Button
            android:id="@+id/btn_register"
            android:textColor="@drawable/selector_txt_pressed_red"
            android:layout_marginTop="@dimen/padding_20dp"
            android:background="@drawable/selector_guide_btn_pressed_width"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/val_40dp"/>
    </LinearLayout>

</LinearLayout>