<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/tool_bar"/>


    <!--内容部分
    layout_behavior:用来控制内容区域-->
    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_username"
            android:inputType="textEmailAddress"
            android:hint="@string/login_input_phoneoremail"
            style="@style/inputTextStyle"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:hint="@string/login_input_pwd"
            style="@style/inputTextStyle"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/padding_20dp"
            android:text="@string/login"
            android:background="@drawable/selector_guide_btn_pressed_width"
            android:textColor="@drawable/selector_txt_pressed_red"
            android:layout_width="match_parent"
            android:layout_height="@dimen/val_40dp"/>

        <TextView
            android:id="@+id/btn_forget"
            android:layout_gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/light_gray"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>