<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginOrRegisterActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/background_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/val_80dp"
            android:layout_height="@dimen/val_80dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:textColor="@drawable/selector_txt_pressed_width"
                android:background="@drawable/selector_guide_btn_pressed"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/val_40dp"/>
            <Button
                android:id="@+id/btn_register"
                android:layout_marginTop="@dimen/padding_20dp"
                android:textColor="@drawable/selector_txt_pressed_width"
                android:background="@drawable/selector_guide_btn_pressed"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/val_40dp"/>
        </LinearLayout>

        <TextView
            android:layout_marginBottom="@dimen/padding_20dp"
            android:layout_above="@+id/lll"
            android:textColor="@color/light_gray"
            android:layout_centerHorizontal="true"
            android:text="@string/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/lll"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/fill"/>

            <ImageView
                android:clickable="true"
                android:src="@drawable/selector_login_img_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <include layout="@layout/fill"/>

            <ImageView
                android:clickable="true"
                android:src="@drawable/selector_login_img_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <include layout="@layout/fill"/>

            <ImageView
                android:clickable="true"
                android:src="@drawable/selector_login_img_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <include layout="@layout/fill"/>

            <ImageView
                android:clickable="true"
                android:src="@drawable/selector_login_img_netease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/fill"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>